--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,56 @@
 ==============================================================
 
+Tag name: noresm3_0_beta08
+Date: 
+One-line Summary: Update to CICE6_6_1, minor BLOM update
+
+Details:
+ - Update BLOM to v1.12.19
+   - Fix interim restart capability (non-answer changing)
+   - Fix NH3 coupling (non-answer changing)
+   - Reduce s_bot oscillations in ref dens adaptation (answer changing)
+   - Set new default namelist parameters (answer changing)
+ - Update CICE to ???
+ - Update git-fleximod to v1.1.1
+
+Component tags used in this tag:
+
+ - parallelio : NCAR/ParallelIO             : pio2_6_2
+ - ccs_config : NorESMhub/ccs_config_noresm : ccs_config_noresm0.0.55
+ - cime       : NorESMhub/cime              : cime6.1.143_noresm_v1
+ - share      : NorESMHub/NorESM_share      : share1.1.9_noresm_v0
+ - blom       : NorESMhub/BLOM              : v1.12.19
+ - cam        : NorESMhub/CAM               : noresm3_0_020_cam6_4_121
+ - cdeps      : NorESMhub/CDEPS             : cdeps1.0.83_noresm_v2
+ - cice6      : NorESMhub/NorESM_CICE       : noresm_cice6_6_0_20250522_v3
+ - cism       : NorESMhub/CISM-wrapper      : cismwrap_2_2_007_noresm_v1
+ - clm        : NorESMhub/CTSM              : ctsm5.3.085_noresm_v1
+    - fates   : NorESMhub/fates             : sci.1.88.6_api.42.0.0_nor_sci1_api1
+ - cmeps      : NorESMhub/CMEPS             : cmeps1.1.23_noresm_v1
+ - mosart     : NorESMhub/MOSART            : mosart1.1.12_noresm_v1
+ - ww3        : NorESMhub/WW3_interface     : ww3_interface_noresm0.0.18
+ - pycect     : NCAR/PyCECT                 : 3.2.2
+
+Bugs fixed:
+
+Describe any changes made to scripts/build system: NA
+
+Describe any substantial timing or memory changes: NA
+
+Code merged by: Tomas Torsvik
+
+Code reviewed by: Steve Goldhaber, Mariana Vertenstein
+
+Summary of pre-tag testing:
+ - prealpha_noresm :
+ - aux_blom_noresm :
+
+
+Summarize any change to answers:
+
+
+==============================================================
+
 Tag name: noresm3_0_beta07
 Date: 06.12.2025
 One-line Summary: Updates to CTSM, CMEPS, CDEPS, CIME, ccs_config
