--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,61 @@ Date: 09.12.2025
 One-line Summary: Update to CICE6.6.1, minor CAM and BLOM updates
 
 Details:
+ - Update BLOM to v1.12.22
+   - namelist options for DMS tuning
+ - Update CTSM to ctsm5.4.002_noresm_v1
+   - fix mizuroute path for git-fleximod
+   - Update surface and landuse datasets for CMIP7 from NCAR
+
+Component tags used in this tag:
+
+ - parallelio : NCAR/ParallelIO             : pio2_6_2
+ - ccs_config : NorESMhub/ccs_config_noresm : ccs_config_noresm0.0.55
+ - cime       : NorESMhub/cime              : cime6.1.143_noresm_v1
+ - share      : NorESMHub/NorESM_share      : share1.1.9_noresm_v0
+ - blom       : NorESMhub/BLOM              : v1.12.22
+ - cam        : NorESMhub/CAM               : noresm3_0_021_cam6_4_121
+ - cdeps      : NorESMhub/CDEPS             : cdeps1.0.83_noresm_v2
+ - cice6      : NorESMhub/NorESM_CICE       : noresm_cice6_6_1_20251129_v1
+ - cism       : NorESMhub/CISM-wrapper      : cismwrap_2_2_007_noresm_v1
+ - clm        : NorESMhub/CTSM              : ctsm5.4.002_noresm_v1
+    - fates   : NorESMhub/fates             : sci.1.88.6_api.42.0.0_nor_sci1_api1
+ - cmeps      : NorESMhub/CMEPS             : cmeps1.1.23_noresm_v1
+ - mosart     : NorESMhub/MOSART            : mosart1.1.12_noresm_v1
+ - ww3        : NorESMhub/WW3_interface     : ww3_interface_noresm0.0.18
+ - pycect     : NCAR/PyCECT                 : 3.2.2
+
+Bugs fixed:
+
+Describe any changes made to scripts/build system:
+
+Describe any substantial timing or memory changes: NA
+
+Code merged by: mvdebolskiy
+
+Code reviewed by: Steve Goldhaber, Mariana Vertenstein, Tomas Torsvik
+
+Summary of pre-tag testing:
+ - prealpha_noresm :
+   - PASS, BASELINE_DIFF for all n* compsets
+ - aux_blom_noresm :
+   - PASS, BASELINE_DIFF for all NorESM3 compsets
+ - aux_clm_noresm :
+   - PASS, BASELINE_DIFF for all compsets
+ - aux_cam_noresm:
+
+
+Summarize any change to answers:
+
+
+
+==============================================================
+
+Tag name: noresm3_0_beta08
+Date: 09.12.2025
+One-line Summary: Update to CICE6.6.1, minor CAM and BLOM updates
+
+Details:
  - Update BLOM to v1.12.21
    - Fix interim restart capability (non-answer changing)
    - Fix NH3 coupling (non-answer changing)
