--- a/ChangeLog
+++ b/ChangeLog
@@ -28,23 +28,19 @@ Component tags used in this tag:
 
 Bugs fixed:
 
-Describe any changes made to scripts/build system:
- - new namelist variables: dmsp3, dmsp4, dmsp5 in BLOM
+Describe any changes made to scripts/build system: NA
 
 Describe any substantial timing or memory changes: NA
 
-Code merged by: mvdebolskiy, Mariana Vertenstein
+Code merged by: 
 
-Code reviewed by: Steve Goldhaber, Mariana Vertenstein, Tomas Torsvik
+Code reviewed by: 
 
 Summary of pre-tag testing:
  - prealpha_noresm :
-   - PASS, BASELINE_DIFF for all N* compsets
  - aux_blom_noresm :
-   - PASS, BASELINE_DIFF for all NorESM3 compsets
+ - aux_cam_noresm :
  - aux_clm_noresm :
-   - PASS, BASELINE_DIFF for all compsets
- - aux_cam_noresm:
 
 
 Summarize any change to answers:
