--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,50 @@
 ==============================================================
 
+Tag name: noresm3_0_beta10a
+Date: 21.01.2026
+One-line Summary: Update Olivia settings
+
+Details:
+ - Update ccs_config to ccs_config_noresm0.0.56
+
+Component tags used in this tag:
+
+ - parallelio : NCAR/ParallelIO             : pio2_6_2
+ - ccs_config : NorESMhub/ccs_config_noresm : ccs_config_noresm0.0.56
+ - cime       : NorESMhub/cime              : cime6.1.143_noresm_v1
+ - share      : NorESMHub/NorESM_share      : share1.1.9_noresm_v0
+ - blom       : NorESMhub/BLOM              : v1.12.23
+ - cam        : NorESMhub/CAM               : noresm3_0_024_cam6_4_121
+ - cdeps      : NorESMhub/CDEPS             : cdeps1.0.87_noresm_v3
+ - cice6      : NorESMhub/NorESM_CICE       : noresm_cice6_6_1_20251129_v1
+ - cism       : NorESMhub/CISM-wrapper      : cismwrap_2_2_007_noresm_v1
+ - clm        : NorESMhub/CTSM              : ctsm5.4.002_noresm_v1
+    - fates   : NorESMhub/fates             : sci.1.88.6_api.42.0.0_nor_sci1_api1
+ - cmeps      : NorESMhub/CMEPS             : cmeps1.1.23_noresm_v1
+ - mosart     : NorESMhub/MOSART            : mosart1.1.12_noresm_v1
+ - ww3        : NorESMhub/WW3_interface     : ww3_interface_noresm0.0.18
+ - pycect     : NCAR/PyCECT                 : 3.2.2
+
+Bugs fixed:
+
+Describe any changes made to scripts/build system: NA
+
+Describe any substantial timing or memory changes: NA
+
+Code merged by: Tomas Torsvik
+
+Code reviewed by: Mariana Vertenstein, Steve Goldhaber, mvdebolskiy, Alok Gupta
+
+Summary of pre-tag testing:
+ - prealpha_noresm :
+ - aux_blom_noresm :
+ - aux_cam_noresm :
+ - aux_clm_noresm :
+
+Summarize any change to answers:
+
+==============================================================
+
 Tag name: noresm3_0_beta10
 Date: 20.01.2026
 One-line Summary: New CAM capability for co2 ffuel, co2 aircraft and nitrogen deposition
