--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@ Date:
 One-line Summary:
 
 Details:
+ - Update BLOM to v1.12.26
+   - New testlist and PES layouts
 
 
 Component tags used in this tag:
@@ -13,7 +15,7 @@ Component tags used in this tag:
  - ccs_config : NorESMhub/ccs_config_noresm : ccs_config_noresm0.0.56
  - cime       : NorESMhub/cime              : cime6.1.143_noresm_v1
  - share      : NorESMHub/NorESM_share      : share1.1.9_noresm_v0
- - blom       : NorESMhub/BLOM              : v1.12.23
+ - blom       : NorESMhub/BLOM              : v1.12.26
  - cam        : NorESMhub/CAM               : noresm3_0_024_cam6_4_121
  - cdeps      : NorESMhub/CDEPS             : cdeps1.0.87_noresm_v3
  - cice6      : NorESMhub/NorESM_CICE       : noresm_cice6_6_1_20251129_v1
