--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,11 @@ One-line Summary:
 Details:
  - Update BLOM to v1.12.26
    - New testlist and PES layouts
+ - Update CTSM to ctsm5.4.002_noresm_v3
+   - Bug fix for excess ice melt.
+   - Update FATES to sci.1.88.6_api.42.0.0_nor_sci2_api1
+   - New default FATES parameter file to fix water balance endrun
+     during historical simulations, reduce LHFLX bias
 
 
 Component tags used in this tag:
@@ -20,8 +25,8 @@ Component tags used in this tag:
  - cdeps      : NorESMhub/CDEPS             : cdeps1.0.87_noresm_v3
  - cice6      : NorESMhub/NorESM_CICE       : noresm_cice6_6_1_20251129_v1
  - cism       : NorESMhub/CISM-wrapper      : cismwrap_2_2_007_noresm_v1
- - clm        : NorESMhub/CTSM              : ctsm5.4.002_noresm_v1
-    - fates   : NorESMhub/fates             : sci.1.88.6_api.42.0.0_nor_sci1_api1
+ - clm        : NorESMhub/CTSM              : ctsm5.4.002_noresm_v3
+    - fates   : NorESMhub/fates             : sci.1.88.6_api.42.0.0_nor_sci2_api1
  - cmeps      : NorESMhub/CMEPS             : cmeps1.1.23_noresm_v1
  - mosart     : NorESMhub/MOSART            : mosart1.1.12_noresm_v1
  - ww3        : NorESMhub/WW3_interface     : ww3_interface_noresm0.0.18
